crates/lowering_v1/tests/snapshots/concrete__lower_binder_char.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {},
    binders: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderChar,
                range: 21..25,
            },
        }: Char,
    },
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 27..29,
            },
        }: Variable {
            qualifier: None,
            name: Some(
                "a",
            ),
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
