crates/lowering_v1/tests/snapshots/concrete__lower_binder_named.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {},
    binders: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderVariable,
                range: 24..25,
            },
        }: Variable {
            name: Some(
                "b",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderNamed,
                range: 21..25,
            },
        }: Named {
            name: Some(
                "a",
            ),
            binder: Some(
                Id<syntax::cst::Binder>(0),
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderVariable,
                range: 28..29,
            },
        }: Variable {
            name: Some(
                "d",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderNamed,
                range: 25..29,
            },
        }: Named {
            name: Some(
                "c",
            ),
            binder: Some(
                Id<syntax::cst::Binder>(2),
            ),
        },
    },
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 31..33,
            },
        }: Variable {
            qualifier: None,
            name: Some(
                "a",
            ),
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
