crates/lowering_v1/tests/snapshots/concrete__lower_binder_typed.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeConstructor,
                range: 27..29,
            },
        }: Constructor {
            qualifier: None,
            name: Some(
                "T",
            ),
        },
    },
    binders: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderVariable,
                range: 23..24,
            },
        }: Variable {
            name: Some(
                "a",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderTyped,
                range: 23..29,
            },
        }: Typed {
            binder: Some(
                Id<syntax::cst::Binder>(0),
            ),
            signature: Some(
                Id<syntax::cst::Type>(0),
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderParenthesized,
                range: 21..30,
            },
        }: Parenthesized {
            binder: Some(
                Id<syntax::cst::Binder>(1),
            ),
        },
    },
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 32..34,
            },
        }: Variable {
            qualifier: None,
            name: Some(
                "a",
            ),
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
